@@ -70,3 +70,4 @@
   * FEATURE: SoundCloud Api
   * FEATURE: Sapo Api
   * FEATURE: Plurk Mobile Api
+  * FEATURE: Kaixin and QWeibo Apis
